# financial-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 03400aafd4e5_encrypt_summary_and_user_attributes.py  2d052032bfd7_add_im_user_mapping.py  81fb23289cf0_add_abac_and_field_encryption.py  8c4f5a9b2e10_add_api_keys.py  a1b2c3d4e5f6_add_notifications_and_apikey_stats.py  d04c33d13d30_initial_schema.py  fcec2006310a_add_report_error_message.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  dependencies.py  logger.py  main.py  metrics.py  middleware.py  security.py  storage.py  tracing.py
backend/app/agent_runtime/: __init__.py  graph.py  nodes.py  state.py  tools.py
backend/app/core/: abac.py  encryption.py  errors.py  roles.py
backend/app/dify/: __init__.py  client.py
backend/app/im/: __init__.py  base.py  commands.py  dingtalk.py  feishu.py  wecom.py
backend/app/llm/: __init__.py  client.py  intent.py  prompts.py
backend/app/models/: __init__.py  access_policy.py  api_key.py  approval.py  audit_log.py  base.py  document.py  error_reflection.py  financial_report.py  im_user_mapping.py  notification.py  report.py  tenant.py  user.py
backend/app/parser/: __init__.py  base.py  cleaner.py  csv_financial_parser.py  excel_parser.py  mineru_client.py  pdf_parser.py  simple_parser.py  utils.py
backend/app/reporting/: __init__.py  generator.py  templates.py
backend/app/routers/: access_policies.py  admin.py  agent.py  api_keys.py  approvals.py  audit.py  auth.py  dashboard.py  dify_tools.py  documents.py  health.py  im.py  im_user_mappings.py  notifications.py  queries.py  reflections.py  reports.py  users.py
backend/app/schemas/: __init__.py  access_policy.py  api_key.py  approval.py  audit.py  auth.py  common.py  dify.py  document.py  health.py  im_user_mapping.py  query.py  report.py  user.py
backend/app/services/: api_key_service.py  approval_service.py  audit_service.py  dashboard_service.py  document_service.py  export_service.py  financial_import_service.py  im_service.py  query_service.py  rag_service.py  reflection_service.py  report_service.py
backend/app/tasks/: __init__.py  document_tasks.py  report_tasks.py  utils.py
backend/app/text2sql/: __init__.py  base.py  financial_schema.py  rule_backend.py  sql_sandbox.py  vanna_backend.py
backend/audit_service/: __init__.py  logger.py  sinks.py  types.py
backend/notification/: __init__.py  base.py  channels.py  service.py
backend/scripts/: benchmark.py  bootstrap.py  entrypoint.sh  healthcheck.py  run_benchmark_with_server.py  seed_demo_data.py  train_vanna.py  worker.py
backend/tests/: conftest.py  test_abac.py  test_access_policies_more.py  test_agent_complex.py  test_agent_llm_real.py  test_agent_runtime.py  test_agent_tools_more.py  test_api_key_service_more.py  test_api_keys.py  test_approvals.py  test_audit.py  test_audit_service_framework.py  test_auth.py  test_dashboard_service.py  test_dify.py  test_dify_tools.py  test_dingtalk_full.py  test_document_tasks.py  test_documents.py  test_e2e.py  test_encryption_more.py  test_excel_parser.py  test_export.py  test_feishu_full.py  test_health.py  test_health_service.py  test_im.py  test_im_base_more.py  test_im_service_more.py  test_im_user_mappings.py  test_llm_integration.py  test_mineru_client.py  test_nl2sql_benchmark.py  test_queries.py  test_rag_service_full.py  test_reflection_service.py  test_reflections_router.py  test_report_tasks.py  test_reports.py  test_security_middleware.py  (+8 more)
backend/tests/integration/: conftest.py  test_integration_api.py
backend/vanna_engine/: __init__.py  engine.py
docs/: ROADMAP.md  admin-guide.md  mvp-test-report.md  user-guide.md
docs/api/: overview.md
docs/design/: architecture.md
docs/ops/: deployment.md  grafana-dashboard.json  integration-testing.md  monitoring.md
docs/postman/: financial-agent.postman_collection.json
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vitest.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/: App.tsx  index.css
scripts/: sync_remotes.sh
shared/: __init__.py  events.py  schemas.py
tests/integration/: docker-compose.dependencies.yml  run_integration_tests.sh  (+1 more)
workers/: __init__.py  run.py
(+77 files in other folders)
