[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "financial-agent-backend"
version = "0.1.0"
description = "企业级财务智能体后端服务"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Financial Agent Team" }
]
keywords = ["finance", "ai", "agent", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "psycopg>=3.1.0",
    "alembic>=1.13.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "python-multipart>=0.0.9",
    "minio>=7.2.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "openpyxl>=3.1.0",
    "fpdf2>=2.8.0",
    "pdfplumber>=0.11.0",
    "cryptography>=42.0.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "factory-boy>=3.3.0",
]
ai = [
    "vanna[chromadb,ollama]>=0.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ARG",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/routers/*.py" = ["B008", "ARG001"]
"app/dependencies.py" = ["B008", "ARG001"]
"app/security.py" = ["B008"]
"app/main.py" = ["ARG001"]
"app/models/*.py" = ["UP037"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
